--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -59,7 +59,14 @@ body {
 header {
     padding: 50px 0;
 }
-
+@media (max-width: 768px) {
+    header li a.activeLink {
+        color:#E68C3A;
+    }
+    header li:hover a {
+        color:#E68C3A;
+    }
+}
 header .span-head {
     color: #fff;
     background: #E68C3A;
@@ -71,7 +78,7 @@ header .span-head {
     width: 75px;
     height: 30px;
     z-index: -1;
-    display: block;
+    display: none;
     transform: translate(-50%, -50%) scale(0);
     -webkit-transform: translate(-50%, -50%) scale(0);
     -moz-transform: translate(-50%, -50%) scale(0);
@@ -83,12 +90,24 @@ header .span-head {
     -ms-transition: .5s;
     -o-transition: .5s;
 }
-header .span-head.activeLink {
-    transform: translate(-50%, -50%) scale(1);
-    -webkit-transform: translate(-50%, -50%) scale(1);
-    -moz-transform: translate(-50%, -50%) scale(1);
-    -ms-transform: translate(-50%, -50%) scale(1);
-    -o-transform: translate(-50%, -50%) scale(1);
+@media (min-width: 768px) {
+    header .span-head {
+        display: block
+    }
+}
+@media (min-width: 768px) {
+    header .span-head.activeLinkSpan {
+        transform: translate(-50%, -50%) scale(1);
+        -webkit-transform: translate(-50%, -50%) scale(1);
+        -moz-transform: translate(-50%, -50%) scale(1);
+        -ms-transform: translate(-50%, -50%) scale(1);
+        -o-transform: translate(-50%, -50%) scale(1);
+    }
+}
+@media (max-width: 767px) {
+    header li a.activeLink {
+        color:#E68C3A
+    }
 }
 header .main-link-header:hover .span-head {
     transform: translate(-50%, -50%) scale(1);
@@ -136,7 +155,7 @@ header .main-link-header:hover .span-head {
     padding: 11px 57px;
     font-size: 16px;
     font-weight: 600;
-    border: 1px solid #e68c3a;
+    border: 1px solid #224C17;
     border-radius: 28px;
     box-shadow: 0px 5px 15px 0px rgba(54, 83, 134, 0.19);
     color: #fff;
@@ -151,7 +170,7 @@ header .main-link-header:hover .span-head {
     -moz-transition: all 0.5s ease-out 0s;
     -ms-transition: all 0.5s ease-out 0s;
     -o-transition: all 0.5s ease-out 0s;
-    background: #e68c3a;
+    background: #224C17;
     font-size: 12px;
     padding: 12px 33px;
     cursor: pointer;
@@ -166,7 +185,7 @@ header .main-link-header:hover .span-head {
 }
 
 .my-btn .btn2:hover {
-    color: #e68c3a;
+    color: #224C17;
     background: #ffffff;
 }
 
@@ -249,4 +268,93 @@ header .main-link-header:hover .span-head {
 .reflect-imgs {
     transform: rotateY(180deg);
     z-index: 1;
+}
+.close-toggle {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    color: #ccc;
+}
+
+/* Banner  */
+.full-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #9dd0a3b5;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('/banner.jpg');
+    margin-bottom: auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.full-banner .content-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.text-textMag {
+    --tw-text-opacity: 1;
+    color: rgb(60 102 171/var(--tw-text-opacity));
+}
+.full-banner .title {
+    font-size: 60px;
+    font-weight: 700;
+    color: #222;
+    margin-top: 10px;
+}
+.full-banner .path {
+    color: #999;
+    padding: 10px 28px;
+    display: flex;
+    gap: 40px;
+    font-size: 18px;
+    font-weight: 500;
+}
+.full-banner .path a {
+    color: #999;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
+}
+.full-banner .path .sec-path {
+    position: relative;
+}
+.full-banner .path .sec-path:before {
+    position: absolute;
+    content: "";
+    top: 4px;
+    left: -22px;
+    font-size: 20px;
+    width: 2px;
+    height: 22px;
+    background: #333;
+    transform: rotate(22deg);
+}
+.full-banner:after {
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    bottom: 0;
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    width: 100%;
+   
+}
+.full-banner .path a:hover {
+    color: #E68C3A;
 }
