--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -605,3 +605,6 @@ label {
     --tw-translate-y: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.my-spin {
+    color: #27541C;
+}
