--- a/components/Faq/MainAccordion.css
+++ b/components/Faq/MainAccordion.css
@@ -4,7 +4,7 @@
 }
 .main-accordion .MuiPaper-root .MuiAccordionSummary-root{
     padding: 5px 20px;
-    background: #8ECB82;
+    background: #224c17;
     color: #fff;
     border-radius: 10px;
     z-index: 2;
