--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -91,7 +91,7 @@
 
     /* For UI */
     .form-ui .input {
-        @apply placeholder:text-gray-400 border text-[#6b7280] border-gray-300 dark:border-gray-600 dark:bg-transparent rounded-md w-full py-2 px-3 focus:outline-none focus:ring-1 focus-within:ring-1 appearance-none transition duration-150 dark:text-gray-100 ease-in-out;
+        @apply placeholder:text-gray-400 border text-[#6b7280] border-gray-300  rounded-md w-full py-2 px-3 focus:outline-none focus:ring-1 focus-within:ring-1 appearance-none transition duration-150 ease-in-out;
     }
 
     .form-ui .input.input-invalid {
@@ -103,7 +103,7 @@
     }
 
     .form-ui .input-addon {
-        @apply flex items-center px-4 rounded-md border border-gray-300 bg-gray-50 dark:border-gray-600 dark:bg-gray-700;
+        @apply flex items-center px-4 rounded-md border border-gray-300 bg-gray-50 ;
     }
 
     .form-ui .input-wrapper {
@@ -111,7 +111,7 @@
     }
 
     .form-ui .input-disabled {
-        @apply bg-gray-100 dark:bg-gray-700 text-gray-400 cursor-not-allowed;
+        @apply bg-gray-100  text-gray-400 cursor-not-allowed;
     }
 
     .input-suffix-start {
