--- a/components/styles/components/_input.css
+++ b/components/styles/components/_input.css
@@ -1,8 +1,6 @@
 .input {
   @apply border 
     border-gray-300 
-    dark:border-gray-600 
-    dark:bg-transparent 
     rounded-md 
     w-full 
     py-2 px-3 
@@ -12,7 +10,6 @@
     appearance-none 
     transition 
     duration-150 
-    dark:text-gray-100
     ease-in-out;
 
   &::placeholder {
@@ -29,7 +26,7 @@
 }
 
 .input-addon {
-  @apply flex items-center px-4 rounded-md border border-gray-300 bg-gray-50 dark:border-gray-600 dark:bg-gray-700;
+  @apply flex items-center px-4 rounded-md border border-gray-300 bg-gray-50 ;
 }
 
 .input-textarea {
@@ -41,7 +38,7 @@
 }
 
 .input-disabled {
-  @apply bg-gray-100 dark:bg-gray-700  text-gray-400 cursor-not-allowed;
+  @apply bg-gray-100   text-gray-400 cursor-not-allowed;
 
   &::placeholder {
     @apply opacity-70;
